# simple_opengl_sdl

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
